Fix z-index

--- a/src/style.scss
+++ b/src/style.scss
@@ -78,5 +78,6 @@ body {
     position: fixed;
     bottom: 10px;
     left: 10px;
+    z-index: 1;
   }
 }
